[fix #70008608] date picker z-index issue

--- a/app/themes/default/css/imports-sunrise.css
+++ b/app/themes/default/css/imports-sunrise.css
@@ -3681,6 +3681,7 @@ div.wide.form .errorMessage {
   border-bottom: 1px solid #bbb;
 }
 #ui-datepicker-div {
+  z-index: 9999 !important;
   max-width: 250px;
   background-color: #f5f5f5 ;
   background-repeat: no-repeat ;
